--- a/public/publication/bennett-2013-testing/index.html
+++ b/public/publication/bennett-2013-testing/index.html
@@ -459,6 +459,8 @@
   
   <a class="badge badge-light" href="/tags/phylogenetics/">phylogenetics</a>
   
+  <a class="badge badge-light" href="/tags/biodiversity/">biodiversity</a>
+  
 </div>
 
 
