--- a/public/publication/bennett-2017-appraisal/index.html
+++ b/public/publication/bennett-2017-appraisal/index.html
@@ -118,7 +118,7 @@ Abstract: Although the term ‘living fossil’ has been around for over 150 yea
   
   <meta property="og:site_name" content="Dominic J. Bennett">
   <meta property="og:url" content="/publication/bennett-2017-appraisal/">
-  <meta property="og:title" content="An appraisal of the ‘Living Fossil’Concept | Dominic J. Bennett">
+  <meta property="og:title" content="Thesis: An appraisal of the ‘Living Fossil’ Concept | Dominic J. Bennett">
   <meta property="og:description" content="Freely available via Imperial College London&rsquo;s Spiral repository
 Abstract: Although the term ‘living fossil’ has been around for over 150 years, it remains scientifically undefined and contentious. Generally, it refers to any taxon that is evolutionarily unique, species-poor and exhibits traits closely resembling those of extinct taxa. This interpretation, however, is not universal. Other interpretations of the term include species that are evolutionary dead-ends, taxa that were first discovered in the fossil record and/or lineages that have undergone no (sic) morphological change."><meta property="og:image" content="/img/icon-192.png">
   <meta property="og:locale" content="en-gb">
@@ -132,7 +132,7 @@ Abstract: Although the term ‘living fossil’ has been around for over 150 yea
 
   
 
-  <title>An appraisal of the ‘Living Fossil’Concept | Dominic J. Bennett</title>
+  <title>Thesis: An appraisal of the ‘Living Fossil’ Concept | Dominic J. Bennett</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -318,7 +318,7 @@ Abstract: Although the term ‘living fossil’ has been around for over 150 yea
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name">An appraisal of the ‘Living Fossil’Concept</h1>
+  <h1 itemprop="name">Thesis: An appraisal of the ‘Living Fossil’ Concept</h1>
 
   
 
