deploy without link

--- a/public/index.html
+++ b/public/index.html
@@ -897,7 +897,7 @@ potential factors may explain the &ldquo;living fossil&rdquo;-condition.</p>
 <p>My entire PhD thesis is available <a href="/publication/bennett-2017-appraisal/" target="_blank">here</a>
 and the slides and recording of a <a href="https://royalsociety.org/" target="_blank">Royal Society</a>
 presentation I gave &ndash; that gives a brief overview of much of my thesis &ndash; can be
-downloaded <a href="/publication/bennett-2019-roysoc/" target="_blank">here</a>.
+downloaded here.
 <br><br></p>
 
 <hr />
