--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -527,6 +527,7 @@
   </span>
   (2019).
   <a href="/publication/bennett-2019-past/" itemprop="name">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time.</a>.
+  Phil Trans B.
   
   <p>
 
@@ -603,6 +604,7 @@
   </span>
   (2019).
   <a href="/publication/bennett-2019-roysoc/" itemprop="name">Conference Presentation: The evolutionary potential of &#39;living fossils&#39;.</a>.
+  Royal Society.
   
   <p>
 
