--- a/public/index.html
+++ b/public/index.html
@@ -897,7 +897,7 @@ potential factors may explain the &ldquo;living fossil&rdquo;-condition.</p>
 <p>My entire PhD thesis is available <a href="/publication/bennett-2017-appraisal/" target="_blank">here</a>
 and the slides and recording of a <a href="https://royalsociety.org/" target="_blank">Royal Society</a>
 presentation I gave &ndash; that gives a brief overview of much of my thesis &ndash; can be
-downloaded here.
+downloaded <a href="/publication/bennett-2019-roysoc/" target="_blank">here</a>.
 <br><br></p>
 
 <hr />
@@ -1831,7 +1831,7 @@ see the paper,
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/bennett-2019-past/" itemprop="url">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time.</a>
+      <a href="/publication/bennett-2019-past/" itemprop="url">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time</a>
     </h3>
 
     
