--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -526,8 +526,8 @@
 
   </span>
   (2019).
-  <a href="/publication/bennett-2019-past/" itemprop="name">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time.</a>.
-  Phil Trans B.
+  <a href="/publication/bennett-2019-past/" itemprop="name">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time</a>.
+  <em>Phil Trans B</em>.
   
   <p>
 
