--- a/public/404.html
+++ b/public/404.html
@@ -323,7 +323,7 @@
     <h2>Latest</h2>
     
     <ul>
-      <li><a href="/publication/bennett-2019-past/">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time.</a></li>
+      <li><a href="/publication/bennett-2019-past/">How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time</a></li>
     </ul>
     
     <ul>
